@@ -6,6 +6,7 @@ NTV/NTV.py
 NTV/NTV_UI.py
 NTV/__init__.py
 NTV/details.py
+NTV/embed.py
 NTV/header_ui.py
 NTV/icons_rc.py
 NTV/mpl_pyqt4_widget.py
